RESOLVED FIXED322769
Fix typo in `WGSL::Types::Primitive` and `WGSL::nameForPrimitiveKind`
https://bugs.webkit.org/show_bug.cgi?id=322769
Summary Fix typo in `WGSL::Types::Primitive` and `WGSL::nameForPrimitiveKind`
Fady Farag
Reported 2026-08-27 15:38:29 PDT
ssia
Attachments
Radar WebKit Bug Importer
Comment 1 2026-08-27 15:38:36 PDT
Fady Farag
Comment 2 2026-08-27 15:40:55 PDT
EWS
Comment 3 2026-08-28 06:32:15 PDT
Committed 320037@main (c67740bfb13b): <https://commits.webkit.org/320037@main> Reviewed commits have been landed. Closing PR #72654 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.