Fix typo in `WGSL::Types::Primitive` and `WGSL::nameForPrimitiveKind` https://bugs.webkit.org/show_bug.cgi?id=322769 rdar://186031593

Reviewed by Mike Wyrzykowski.

Both strings appear in WGSL diagnostics.

* Source/WebGPU/WGSL/GlobalVariableRewriter.cpp:
(WGSL::nameForPrimitiveKind):
* Source/WebGPU/WGSL/Types.h:

Canonical link: https://commits.webkit.org/320037@main